dark mode fix

--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,5 @@ button{
 }
 .darkmode{
     color: white;
-    background-color: black;
+    background-color: rgb(39, 39, 39);
 }
